Introduction of backend API and JS File

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.bg-brown{background-color:#9f7431}/*!
+.bg-brown{background-color:#442408}/*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
