Backend API + Frontend Connection
- Small style changes (scss file)
- Adaptations to the HTML file to make the connection with the JavaScript
- Development of the backend API to provide the data to be shown in the web page and other minor adaptations to the CORS policy
- JavaScript file:
  - Addition of the books to the select
  - Button to get more information about the books
  - Inclusion of a disappearing error message when the first option is selected

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
+$brown: #442408;
+
 .bg-brown {
-    background-color: #9F7431;
+    background-color: $brown; 
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
